# EtereBridge

./: .gitignore  EtereBridge.py  EtereBridge2.py  Instructions.md  NOTES.txt  Pipfile  README.md  WLCombine.py  commit_message.txt  config.ini  config_manager.py  config_setup.py  configuration_ui.py  derive_language.py  file_processor.py  main.py  monetary_utils.py  output-column-key.md  pyproject.toml  time_utils.py  user_interface.py  utils.py
input/monthly_files/: CCA SFO Chinese.csv  ETERE PRODUCED INPUT FILE.csv  NYDOH 2320.csv  SCWA.csv
output/: CCA SFO Chinese_Processed_2024-11-14.xlsx  CCA SFO Chinese_Processed_2024-12-13.xlsx  ETERE PRODUCED INPUT FILE_Processed_2024-11-14.xlsx  ETERE PRODUCED INPUT FILE_Processed_2024-12-13.xlsx  NYDOH 2320_Processed_2024-11-14.xlsx  NYDOH 2320_Processed_2024-12-13.xlsx  SCWA_Processed_2024-11-14.xlsx  SCWA_Processed_2024-12-13.xlsx
output/summaries/CCA SFO Chinese_20241114_134444/: summary.csv  summary.json
output/summaries/CCA SFO Chinese_20241213_123456/: summary.csv  summary.json
output/summaries/ETERE PRODUCED INPUT FILE_20241114_134500/: summary.csv  summary.json
output/summaries/ETERE PRODUCED INPUT FILE_20241213_123506/: summary.csv  summary.json
output/summaries/NYDOH 2320_20241114_134509/: summary.csv  summary.json
output/summaries/NYDOH 2320_20241213_123521/: summary.csv  summary.json
output/summaries/SCWA_20241114_134517/: summary.csv  summary.json
output/summaries/SCWA_20241213_123536/: summary.csv  summary.json
templates/: Template_File_B - Copy.xlsx  Template_File_B.xlsx
