[project]
name = "eterebridge"
version = "0.1.0"
description = "Converts Etere .csv to back written run sheet"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "black (>=25.1.0,<26.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"